add gitignore and update copy of content

--- a/1.index.md
+++ b/1.index.md
@@ -4,7 +4,7 @@ title: 'Home'
 
 # TuluCo Inc.
 
-Welcome to [TuluCo Inc](https://tuluco.com/) launch page :rocket:
+Welcome to [TuluCo Inc](https://tuluco.com/) launch page! :rocket:
 
 ::testing-made-easy
 Attacking corner cases one client at a time!
