Add Co-op and fix github actions

--- a/2.CV.md
+++ b/2.CV.md
@@ -84,6 +84,27 @@ __Cisco__, San Jose, CA
 - Conducted EDVT testing of Chases and Boards
 - Major accomplishments: Discovered a Z-axis issue on Pick and Place that caused many DOA Prototypes, and a Backplane grounding issue that lead to a fire in EDVT
 
+__Validation Engineer__
+
+`March 2008-May 2008`
+
+__Intel Corporation__, Hudson, MA
+
+- Validated the confidence of the Architecture team output as a member of the Tools team
+- Certified the cache coherency of an Octa-Core Processor for the Enterprise Usage
+- Utilized Behavioral Modeling software
+
+__Firmware Engineer__
+
+`January 2007-June 2007`
+
+__L3Harris Technologies__, Rochester, NY
+
+- Developed and conducted manual and automated black-box testing of software-defined radios 
+- Utilized a multitude of tools: Vector Analyzer, Satellite Simulator, BER 
+- Major accomplishments include finding a memory leak due to the UX design flaw
+
+
 
 
 <!-- ### Footer
