--- a/1.index.md
+++ b/1.index.md
@@ -7,5 +7,5 @@ title: 'Home'
 Welcome to [TuluCo Inc](https://tuluco.com/) launch page! :rocket:
 
 ::testing-made-easy
-Attacking corner cases one client at a time!
+Push past the 80/20!
 ::
