add :bar_chart: emoji to tag line

--- a/1.index.md
+++ b/1.index.md
@@ -7,5 +7,5 @@ title: 'Home'
 Welcome to [TuluCo Inc](https://tuluco.com/) launch page! :rocket:
 
 ::testing-made-easy
-Push past the 80/20!
+Push past the 80/20! :bar_chart:
 ::
