--- a/2.CV.md
+++ b/2.CV.md
@@ -57,10 +57,10 @@ __Software in Test Engineer__
 
 __Opower (Purchased by Oracle)__, San Francisco, CA
 
-- Voice of quality in a Full Stack development team 
-- Assured quality of microservice implemented with AngularJS and jetty stack
-- Guided on automated and manual testing
-- The first major impact was providing some Pagerduty coverage while working to decommission the old design that was the cause of those said fire
+- Voice of quality in a full-stack development team 
+- Assured quality of microservice implemented with AngularJS and Jetty stack
+- Guided on automated and manual testing and documented them in TestRail
+- Specialized in providing some PagerDuty coverage while working to decommission the old design that was the cause of those said fire
 
 __Test Engineer__
 
@@ -82,7 +82,7 @@ __Cisco__, San Jose, CA
 - Programmed Mainboard and Daughter Boards
 - Validated the proper Voltage Characteristics of Power Regulators
 - Conducted EDVT testing of Chases and Boards
-- Major accomplishments: Discovered a Z-axis issue on Pick and Place that caused many DOA Prototypes, and a Backplane grounding issue that lead to a fire in EDVT
+- Major accomplishments: Discovered a Z-axis issue on Pick-and-Place that caused many DOA Prototypes, and a Backplane grounding issue that lead to a fire in EDVT
 
 __Validation Engineer__
 
